index.css
.header {
    margin: auto;
    width: 100%;
    text-align: center;
}

.navbar {
    width: 50%;
    margin: auto;
    text-align: center;
}

.navbar-button {
    display: inline-block;
}

.portfolio-element {
    border-style: solid;
    border-width: 1px;
    border-color: #000;
    height: 325px;
    margin: 5px;
}

.portfolio-image {
    float: left;
    height: 315px;
    padding: 5px;
}

.portfolio-video {
    float: left;
    height: 315px;
    padding: 5px;
}

.portfolio-text {
    padding-left: 50px
}

ul {
    display: block;
    list-style-type: disc;
    list-style-position: inside;
}

